# chat-app

./: README.md  raw.txt
backend/: Cargo.toml
backend/src/: auth.rs  database.rs  encryption.rs  main.rs  models.rs  test.rs  websocket.rs
frontend/: Cargo.toml
frontend/src/: chat_ui.rs  main.rs  websocket_client.rs
