[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
actix-web-actors = "4.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.16"    # For encryption
jsonwebtoken = "7.2"
bcrypt = "0.16"
diesel = { version = "2.0", features = ["postgres", "chrono"] }
dotenv = "0.15"
